fix dark mode

--- a/style.scss
+++ b/style.scss
@@ -5,11 +5,15 @@
 [data-theme='light'] {
   --color-bg: #ffffff;
   --color-fg: #000000;
+  --color-menu: #ffffff;
+  --small-text: #000000;
 }
 
 [data-theme='dark'] {
   --color-bg: #000000;
   --color-fg: #ffffff;
+  --color-menu: #223344;
+  --small-text: #909193;
 }
 
 body {
@@ -33,6 +37,7 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 2rem 1rem 2rem;
+  backdrop-filter: var(--blur-light);
 }
 
 .header {
@@ -102,6 +107,7 @@ h1 {
 
   .small-text {
     font-size: 0.6rem;
+    color: var(--small-text);
   }
 }
 
@@ -111,7 +117,7 @@ h1 {
   right: 0;
   width: 0;
   height: 100%;
-  background-color: #ffffff;
+  background-color: var(--color-menu);
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -122,7 +128,7 @@ h1 {
   margin: 2rem 1rem 0;
   .close-button {
     border: none;
-    background-color: #ffffff;
+    background-color: var(--color-menu);
     .close-img {
       font-size: 2rem;
       color: var(--color-fg);
@@ -150,6 +156,10 @@ h1 {
 }
 .sidebar.active {
   width: 65%;
+}
+
+.container.active {
+  filter: blur(5px);
 }
 
 .btn {
@@ -210,15 +220,6 @@ h1 {
   .btn__indicator {
     transform: translateX(-1.75rem);
     box-shadow: 0 8px 40px rgba(0, 0, 0, 0.3);
-  }
-  .small-text {
-    color: #909193;
-  }
-  .sidebar {
-    background-color: #223344;
-  }
-  .close-button {
-    background-color: #223344;
   }
 }
 
